# wmr918

./: Makefile.am  README  autogen.sh  configure.in
data/: Makefile.am  install.sql  wmr918.config  wmr918.sh
doc/: HISTORY  INSTALL  Makefile.am  db-spec.txt  protocol-serial.xls
src/: Makefile.am  cfg.c  database.c  dbrecord.h  logger.c  misc.c  process.c  protocol.h  serial.c  wmr918.c  wmr918.h
